# seo_system_blank

./: .gitignore  .mcp.json  AI_FRIENDLY_IMPLEMENTATION_PLAN.md  CONTEXT_AI.md  CUSTOMIZATION.md  DOGFOOD_FINDINGS.md  FRONTEND_DATABASE_SCHEMA_GUIDE.md  FRONTEND_INTEGRATION_GUIDE.md  LIVE_TESTING_PLAN.md  QUICKSTART.md  README.md  STYLE_GUIDE.md  _TEMPLATE_README.md  central_database_schema.sql  compass_artifact_wf-a3216f12-4e30-4b4f-818b-a4542b57e849_text_markdown.md  database_schema.sql  env.example  health_server.py  main.py  railway.json  railway_worker.py  requirements.txt  seo_system_blank.code-workspace
.claude/skills/explain-code/: style.md
config/: __init__.py  product_content.py  prompts.py  settings.py
dashboard/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  wrangler.toml
dashboard/public/: robots.txt
dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
data/: topics_template.json
legacy/: Dockerfile  README.md  health_server.py  main.py  railway_worker.py
legacy/config/: product_content_template.py  settings.py
legacy/data/: topics_propertyplan.json
legacy/src/: generator.py  seo.py  topics.py  utils.py
migrations/: 001_add_topic_settings.sql  001_content_format_time_variation.sql  002_add_website_scanning.sql  003_add_stripe_fields.sql  004_fix_starter_plan_limit.sql  005_website_partners.sql
src/: database.py  generator.py  scheduler.py  seo.py  topics.py  utils.py
worker/: README.md  pyproject.toml  wrangler.toml
worker/src/: crypto.js  entry.py
(+74 files in other folders)
